syntax = "proto3";

package reports;

import "habits/habits.proto";
import "tasks/tasks.proto";

option go_package = "pb/reports";

// The Reports service definition.
service ReportsService {

  rpc GetHabitsReport (Empty) returns (HabitsReport) {}

  rpc GetHabitsUserReport (AccountID) returns (HabitsUserReport) {}

  rpc GetTasksReport (Empty) returns (TasksReport) {}

  rpc GetTasksUserReport (AccountID) returns (TasksUserReport) {}
}

message Empty {}

message AccountID {
  // Unique account id in the Task Manager system.
  int64 id = 1;
}

message HabitsReport {
  int64 blue_count = 1;
  int64 green_count = 2;
  int64 yellow_count = 3;
  int64 orange_count = 4;
  int64 red_count = 5;

  habits.Habit worst = 6;
  habits.Habit best = 7;
}

message HabitsUserReport {
  repeated habits.Habit good_habits = 1;
  repeated habits.Habit bad_habits = 2;
}

message TasksReport {
  repeated tasks.Task delayed = 1;
  repeated tasks.Task dueToday = 2;
}

message TasksUserReport {

  message CompletedTasks {
    int64 onTime = 1;
    int64 beforeTime = 2;
    int64 delayed = 3;
  }

  message AvailableTasks {
    int64 remaining = 1;
    int64 forToday = 2;
    int64  delayed= 3;
  }

  CompletedTasks completed_tasks = 1;
  AvailableTasks available_tasks = 2;
}
