syntax = "proto3";

package tasks;

option java_package = "com.tasks.proto";
option java_outer_classname = "TasksMicroservice";
option go_package = "pb/tasks";

service TasksService {
  // Get a list of tasks from the User ID
  rpc GetTasks (UserID) returns (Tasks){}

  // Create a task based on the User ID
  rpc CreateTask (Task) returns (StatusResponse){}

  // Delete a task based on the User ID
  rpc DeleteTask (TaskID) returns (StatusResponse){}

  // Get a specific task based on the task ID
  rpc GetTaskById (TaskID) returns (Task){}

  // Update a specific task based on the task ID
  rpc UpdateTask (Task) returns (StatusResponse){}
  
  // Mark the task as completed 
  rpc CompleteTask (TaskID) returns (Task){}
}

message Task {
  int64 id = 1;
  int64 user_id = 2;
  string title = 3;
  string description = 4;
  int64 created_timestamp  = 5;
  int64 due_timestamp  = 6;
  int64 completed_timestamp  = 7;
  repeated int64  reminder_timestamp = 8;
  string display_color = 9;
  bool is_completed = 10; 
  bool reminder_flag = 11; 
}

message StatusResponse {
  bool succeeded = 1;
  string error = 2;
}

message Tasks {
  repeated Task tasks = 1;
}

message UserID {
  int64 id = 1;
}

message TaskID {
  int64 id = 1;
}
